--- a/Timer-Weather/Timer-Weather/Views/Clocks/AnalogClockView.xib
+++ b/Timer-Weather/Timer-Weather/Views/Clocks/AnalogClockView.xib
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AnalogClockView" customModule="Timer_Weather" customModuleProvider="target">
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="boolean" keyPath="isDarkTheme" value="NO"/>
+            </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="backgroundImageView" destination="2bu-ow-g9L" id="Ssa-hu-EL4"/>
                 <outlet property="bottomDialBackgroundImageView" destination="3TI-BY-EKz" id="SCa-AW-uu7"/>
@@ -23,32 +25,31 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JqS-TC-4Hi" userLabel="View">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+            <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chronography-black" translatesAutoresizingMaskIntoConstraints="NO" id="2bu-ow-g9L">
-                    <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                    <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="2bu-ow-g9L" secondAttribute="height" multiplier="1:1" id="kbF-p7-5kb"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="upper-dial" translatesAutoresizingMaskIntoConstraints="NO" id="E8c-Q5-nnu">
-                    <rect key="frame" x="110" y="40" width="80" height="80"/>
+                    <rect key="frame" x="97" y="40" width="76" height="76"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="E8c-Q5-nnu" secondAttribute="height" multiplier="1:1" id="1XV-FV-V2l"/>
-                        <constraint firstAttribute="width" constant="80" id="Wt8-rU-MQn"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sec" translatesAutoresizingMaskIntoConstraints="NO" id="g3E-SB-Suy">
-                    <rect key="frame" x="15" y="0.0" width="270" height="300"/>
+                    <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="min" translatesAutoresizingMaskIntoConstraints="NO" id="qxL-AN-Yxl">
-                    <rect key="frame" x="15" y="0.0" width="270" height="300"/>
+                    <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hour" translatesAutoresizingMaskIntoConstraints="NO" id="ugG-dt-FcU">
-                    <rect key="frame" x="15" y="0.0" width="270" height="300"/>
+                    <rect key="frame" x="0.0" y="0.0" width="270" height="270"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPa-M8-qmP">
-                    <rect key="frame" x="208.5" y="141.5" width="41.5" height="17"/>
+                    <rect key="frame" x="178.5" y="126.5" width="41.5" height="17"/>
                     <attributedString key="attributedText">
                         <fragment content="FRI">
                             <attributes>
@@ -66,18 +67,17 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kqy-3e-jf4">
-                    <rect key="frame" x="110" y="180" width="80" height="80"/>
+                    <rect key="frame" x="97" y="154" width="76" height="76"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom-dial-second" translatesAutoresizingMaskIntoConstraints="NO" id="4Vr-Vb-lvr">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                            <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bottom-dial" translatesAutoresizingMaskIntoConstraints="NO" id="3TI-BY-EKz">
-                            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                            <rect key="frame" x="0.0" y="0.0" width="76" height="76"/>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="80" id="BqI-2C-EJW"/>
                         <constraint firstItem="4Vr-Vb-lvr" firstAttribute="top" secondItem="kqy-3e-jf4" secondAttribute="top" id="MzY-uP-dGj"/>
                         <constraint firstItem="3TI-BY-EKz" firstAttribute="top" secondItem="kqy-3e-jf4" secondAttribute="top" id="NAo-z9-5s7"/>
                         <constraint firstAttribute="trailing" secondItem="3TI-BY-EKz" secondAttribute="trailing" id="QZi-9U-Hyo"/>
@@ -93,28 +93,27 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="2bu-ow-g9L" firstAttribute="top" secondItem="JqS-TC-4Hi" secondAttribute="top" id="23j-Wo-aFU"/>
-                <constraint firstItem="NRB-fR-LiT" firstAttribute="trailing" secondItem="lPa-M8-qmP" secondAttribute="trailing" constant="50" id="2Sn-Zb-RI7"/>
-                <constraint firstItem="NRB-fR-LiT" firstAttribute="bottom" secondItem="kqy-3e-jf4" secondAttribute="bottom" constant="40" id="3Gq-Dc-PJp"/>
+                <constraint firstAttribute="trailing" secondItem="lPa-M8-qmP" secondAttribute="trailing" constant="50" id="2Sn-Zb-RI7"/>
+                <constraint firstAttribute="bottom" secondItem="kqy-3e-jf4" secondAttribute="bottom" constant="40" id="3Gq-Dc-PJp"/>
                 <constraint firstAttribute="bottom" secondItem="2bu-ow-g9L" secondAttribute="bottom" id="71l-dQ-u35"/>
                 <constraint firstItem="ugG-dt-FcU" firstAttribute="centerX" secondItem="JqS-TC-4Hi" secondAttribute="centerX" id="FuP-LI-tHr"/>
                 <constraint firstItem="g3E-SB-Suy" firstAttribute="centerX" secondItem="JqS-TC-4Hi" secondAttribute="centerX" id="RA9-g5-2dX"/>
                 <constraint firstItem="2bu-ow-g9L" firstAttribute="leading" secondItem="JqS-TC-4Hi" secondAttribute="leading" id="VXC-KY-Gde"/>
-                <constraint firstItem="NRB-fR-LiT" firstAttribute="bottom" secondItem="ugG-dt-FcU" secondAttribute="bottom" id="X9C-SZ-UdG"/>
-                <constraint firstItem="NRB-fR-LiT" firstAttribute="bottom" secondItem="qxL-AN-Yxl" secondAttribute="bottom" id="XMK-9w-ywt"/>
+                <constraint firstAttribute="bottom" secondItem="ugG-dt-FcU" secondAttribute="bottom" id="X9C-SZ-UdG"/>
+                <constraint firstAttribute="bottom" secondItem="qxL-AN-Yxl" secondAttribute="bottom" id="XMK-9w-ywt"/>
                 <constraint firstItem="lPa-M8-qmP" firstAttribute="centerY" secondItem="JqS-TC-4Hi" secondAttribute="centerY" id="dNk-DN-do3"/>
                 <constraint firstItem="E8c-Q5-nnu" firstAttribute="centerX" secondItem="JqS-TC-4Hi" secondAttribute="centerX" id="eP3-eb-bkg"/>
                 <constraint firstItem="qxL-AN-Yxl" firstAttribute="centerX" secondItem="JqS-TC-4Hi" secondAttribute="centerX" id="elf-XN-ird"/>
                 <constraint firstItem="g3E-SB-Suy" firstAttribute="top" secondItem="JqS-TC-4Hi" secondAttribute="top" id="hif-Dy-GXh"/>
                 <constraint firstItem="g3E-SB-Suy" firstAttribute="centerY" secondItem="JqS-TC-4Hi" secondAttribute="centerY" id="jMB-SV-s5J"/>
-                <constraint firstItem="ugG-dt-FcU" firstAttribute="top" secondItem="NRB-fR-LiT" secondAttribute="top" id="kLR-IQ-Jcu"/>
+                <constraint firstItem="ugG-dt-FcU" firstAttribute="top" secondItem="JqS-TC-4Hi" secondAttribute="top" id="kLR-IQ-Jcu"/>
                 <constraint firstItem="E8c-Q5-nnu" firstAttribute="top" secondItem="JqS-TC-4Hi" secondAttribute="top" constant="40" id="kbe-3M-mjJ"/>
-                <constraint firstItem="qxL-AN-Yxl" firstAttribute="top" secondItem="NRB-fR-LiT" secondAttribute="top" id="kdb-gh-KVo"/>
+                <constraint firstItem="qxL-AN-Yxl" firstAttribute="top" secondItem="JqS-TC-4Hi" secondAttribute="top" id="kdb-gh-KVo"/>
                 <constraint firstAttribute="trailing" secondItem="2bu-ow-g9L" secondAttribute="trailing" id="sFt-7m-bI5"/>
                 <constraint firstItem="kqy-3e-jf4" firstAttribute="centerX" secondItem="JqS-TC-4Hi" secondAttribute="centerX" id="x9H-Rb-RVv"/>
                 <constraint firstAttribute="bottom" secondItem="g3E-SB-Suy" secondAttribute="bottom" id="xLq-Cs-EEc"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="NRB-fR-LiT"/>
             <point key="canvasLocation" x="116" y="-103.44827586206897"/>
         </view>
     </objects>
